default/objects/Activity/fields/Terminal__c.field-meta.xml
<CustomField>
    <fullName>Terminal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Terminal</label>
    <referenceTo>Terminal__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>