default/objects/Activity/fields/The_cost_of_meeting_FS__c.field-meta.xml
<CustomField>
    <fullName>The_cost_of_meeting_FS__c</fullName>
    <label>The cost of meeting FS</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>