default/objects/Activity/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <label>Topic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>My Card(s)</fullName>
                <label>Cards</label>
            </value>
            <value>
                <fullName>Update my account details</fullName>
                <label>Admin Account Changes</label>
            </value>
            <value>
                <fullName>Change of conditions</fullName>
            </value>
            <value>
                <fullName>Products &amp; Services</fullName>
            </value>
            <value>
                <fullName>Invoices &amp; Payments</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
                <label>Internal work</label>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>