default/objects/Activity/fields/Visit_Done__c.field-meta.xml
<CustomField>
    <fullName>Visit_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created to see, if Customer Visit is done or not.</description>
    <label>Visit Done</label>
    <type>Checkbox</type>
</CustomField>