default/objects/Activity/listViews/Activities_Today_Russian.listView-meta.xml
<ListView>
    <fullName>Activities_Today_Russian</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>EVENT.LOCATION</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>REMINDER_DATE_TIME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>TASK.DUE_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Задачи на сегодня</label>
    <language>en_US</language>
    <sharedTo>
        <group>AllRussianRoles</group>
    </sharedTo>
</ListView>