default/objects/Activity/listViews/Activities_Tomorrow_Rus.listView-meta.xml
<ListView>
    <fullName>Activities_Tomorrow_Rus</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACTIVITY.TASK</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>TASK.DUE_DATE</field>
        <operation>equals</operation>
        <value>TOMORROW</value>
    </filters>
    <label>Задачи на завтра</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinatesInternal>PPR_Fleetcor</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>