default/objects/Activity/listViews/koly_na_dne_n_den_a_nezpracovan.listView-meta.xml
<ListView>
    <fullName>koly_na_dne_n_den_a_nezpracovan</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>ACTIVITY.TASK</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>TASK.DUE_DATE</field>
        <operation>lessThan</operation>
        <value>TOMORROW</value>
    </filters>
    <label>Úkoly na dnešní den + nezpracované</label>
    <language>cs</language>
    <sharedTo>
        <group>CCS_Records</group>
    </sharedTo>
</ListView>