default/objects/Activity/listViews/NVM_Callbacks.listView-meta.xml
<ListView>
    <fullName>NVM_Callbacks</fullName>
    <booleanFilter>(1 OR 2) AND 3</booleanFilter>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>NVMContactWorld__Customer_Number__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.SUBJECT</field>
        <operation>equals</operation>
        <value>Requested Callback</value>
    </filters>
    <filters>
        <field>TASK.SUBJECT</field>
        <operation>equals</operation>
        <value>Out Of Hours Callback</value>
    </filters>
    <filters>
        <field>TASK.STATUS</field>
        <operation>equals</operation>
        <value>In Bearbeitung,In Progress</value>
    </filters>
    <label>NVM My Callbacks</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinatesInternal>Role_Up</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>