default/objects/Activity/listViews/NVM_Voicemails.listView-meta.xml
<ListView>
    <fullName>NVM_Voicemails</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.SUBJECT</field>
        <operation>equals</operation>
        <value>Voicemail Received</value>
    </filters>
    <filters>
        <field>TASK.CALLOBJECT</field>
        <operation>notEqual</operation>
    </filters>
    <label>NVM My Voicemails</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinatesInternal>Role_Up</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>