default/objects/Activity/listViews/X2_My_Tasks_Due_Next_30_Days.listView-meta.xml
<ListView>
    <fullName>X2_My_Tasks_Due_Next_30_Days</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>EVENT.LOCATION</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACTIVITY.TASK</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>TASK.DUE_DATE</field>
        <operation>equals</operation>
        <value>NEXT_N_DAYS:30</value>
    </filters>
    <filters>
        <field>TASK.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>4. My Tasks Due Next 30 Days</label>
    <language>de</language>
    <sharedTo>
        <role>AllStar_Sales</role>
        <role>AllStar_Teamleader</role>
        <role>CCS_Administrator</role>
        <role>CCS_CZ_Contact_Center</role>
        <role>CCS_CZ_KAM</role>
        <role>CCS_CZ_KAM_Team_Lead</role>
        <role>CCS_CZ_LAM</role>
        <role>CCS_CZ_LAM_Team_Lead</role>
        <role>CCS_CZ_SME</role>
        <role>CCS_CZ_Telesales</role>
        <role>CCS_Contact_Center_Team_Lead</role>
        <role>CCS_SK_Contact_Center</role>
        <role>CCS_SK_SME</role>
        <role>CCS_SME_Team_Lead</role>
        <role>CCS_Telesales_Team_Lead</role>
        <role>Callcenter</role>
        <role>Credit</role>
        <role>Data_Analyst</role>
        <role>Degussa</role>
        <role>HH_Trainer</role>
        <role>Harte_Hank</role>
        <role>Harte_Hank_Dutch_INBOUND</role>
        <role>Harte_Hank_Dutch_OUTBOUND</role>
        <role>Harte_Hank_Germany</role>
        <role>Role_Up</role>
        <role>START</role>
        <role>Salesmanager</role>
        <role>Salesmanager_2</role>
        <role>Salesteam</role>
        <role>Salesteam_Flexcard</role>
        <role>Salesteam_Harte_Hank</role>
        <role>Salesteam_Inbound</role>
        <role>Salesteam_Inbound_2</role>
        <role>Salesteam_Outbound</role>
        <role>Salesteam_Outbound_2</role>
        <role>Salesteam_Outbound_3</role>
        <role>Salesteam_Outbound_4</role>
        <role>Salesteam_Outbound_5</role>
        <role>Starts_Team_Manager</role>
        <role>Starts_Team_Rep</role>
        <role>Teamleiter</role>
        <role>Teamleiter_Harte_Hank</role>
        <role>Teamleiter_Inbound</role>
        <role>Teamleiter_Inbound_2</role>
        <role>Teamleiter_Outbound_1</role>
        <role>Teamleiter_Outbound_2</role>
        <role>Teamleiter_Outbound_3</role>
        <role>Teamleiter_Outbound_4</role>
        <role>Teamleiter_Outbound_5</role>
    </sharedTo>
</ListView>